--- a/public/404.html
+++ b/public/404.html
@@ -18,13 +18,13 @@
 <link rel="mask-icon" href="https://dhtzs.dev/favicons/favicon.svg">
 <meta name="theme-color" content="#1D1E20">
 <meta name="msapplication-TileColor" content="#1D1E20">
+<link rel="alternate" hreflang="en" href="https://dhtzs.dev/404.html">
 <noscript>
     <style>
         #theme-toggle,
         .top-link {
             display: none;
         }
-
     </style>
     <style>
         @media (prefers-color-scheme: dark) {
@@ -52,7 +52,6 @@
                 border-color: var(--theme);
             }
         }
-
     </style>
 </noscript>
 
@@ -61,16 +60,20 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVC4CS3028"></script>
 <script>
-var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
-var doNotTrack = (dnt == "1" || dnt == "yes");
-if (!doNotTrack) {
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	gtag('config', 'G-LVC4CS3028', { 'anonymize_ip': false });
-}
+    var doNotTrack = false;
+    if ( true ) {
+        var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
+        var doNotTrack = (dnt == "1" || dnt == "yes");
+    }
+    if (!doNotTrack) {
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag("js", new Date());
+        gtag("config", "G-LVC4CS3028");
+    }
 </script>
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Explore my persona — A student, programmer, and bug bounty hunter on a digital journey." />
@@ -95,7 +98,6 @@ if (!doNotTrack) {
     } else if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
         document.body.classList.add("dark");
     }
-
 </script>
 
 <header class="header">
@@ -136,7 +138,7 @@ if (!doNotTrack) {
         <ul id="menu">
             <li>
                 <a href="https://dhtzs.dev/" title="Home">
-                    <span class="active">Home</span>
+                    <span>Home</span>
                 </a>
             </li>
             <li>
