--- a/public/search/index.html
+++ b/public/search/index.html
@@ -20,13 +20,13 @@
 <link rel="mask-icon" href="https://dhtzs.dev/favicons/favicon.svg">
 <meta name="theme-color" content="#1D1E20">
 <meta name="msapplication-TileColor" content="#1D1E20">
+<link rel="alternate" hreflang="en" href="https://dhtzs.dev/search/">
 <noscript>
     <style>
         #theme-toggle,
         .top-link {
             display: none;
         }
-
     </style>
     <style>
         @media (prefers-color-scheme: dark) {
@@ -54,7 +54,6 @@
                 border-color: var(--theme);
             }
         }
-
     </style>
 </noscript>
 
@@ -63,16 +62,20 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVC4CS3028"></script>
 <script>
-var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
-var doNotTrack = (dnt == "1" || dnt == "yes");
-if (!doNotTrack) {
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	gtag('config', 'G-LVC4CS3028', { 'anonymize_ip': false });
-}
+    var doNotTrack = false;
+    if ( true ) {
+        var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
+        var doNotTrack = (dnt == "1" || dnt == "yes");
+    }
+    if (!doNotTrack) {
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag("js", new Date());
+        gtag("config", "G-LVC4CS3028");
+    }
 </script>
 <meta property="og:title" content="Search" />
 <meta property="og:description" content="Find cybersecurity nuggets — Dive into my ethical hacking experiences smoothly with the search tool, uncovering nuggets of knowledge and practical solutions." />
@@ -112,7 +115,6 @@ if (!doNotTrack) {
     } else if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
         document.body.classList.add("dark");
     }
-
 </script>
 
 <header class="header">
