--- a/public/404.html
+++ b/public/404.html
@@ -212,6 +212,9 @@
             document.body.classList.add("dark");
             localStorage.setItem("pref-theme", "dark");
         }
+        if (activityChart !== undefined) {
+            activityChart.update();
+        }
     });
 </script>
 </body>
