--- a/public/about-me/index.html
+++ b/public/about-me/index.html
@@ -177,6 +177,7 @@
     <li><a href="#experience-and-contributions">Experience and Contributions</a></li>
     <li><a href="#bug-bounty-profiles">Bug Bounty Profiles</a></li>
     <li><a href="#methodology">Methodology</a></li>
+    <li><a href="#activity">Activity</a></li>
   </ul>
 </nav>
         </div>
@@ -200,6 +201,119 @@
 <p>On these platforms, you can see my profile, my past submissions, and my overall stats. Take the opportunity to check and see the impact that I&rsquo;ve made on each platform. I&rsquo;m always interested in connecting with others in the bug bounty community, so <strong>don&rsquo;t hesitate to reach out and say hello</strong>.</p>
 <h2 id="methodology">Methodology</h2>
 <p>When it comes to bug bounty hunting, I believe in taking a methodical and data-driven approach. I rely on a combination of manual testing, automated scanning, and targeted research to identify vulnerabilities, and I&rsquo;m always looking for new tools and techniques to improve my process. I have a particular expertise in reconnaissance, and <strong>I&rsquo;m constantly studying new attack vectors and exploitation techniques to stay ahead of the curve</strong>.</p>
+<h2 id="activity">Activity</h2>
+<p>This graph captures my digital interactions, showcasing left, right, and middle mouse clicks, mouse and scroll distances, as well as keypresses. The data is updated every 24 hours, providing a fresh snapshot of my daily engagement.</p>
+<div><canvas id="activity-chart"></canvas></div>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+    var activityChart;
+    fetch("https://dhtzs.dev/api/activity").then(res => res.json()).then(data => {
+        var datasets = [
+            { label: "Left clicks", data: data["left_clicks"] },
+            { label: "Right clicks", data: data["right_clicks"] },
+            { label: "Middle clicks", data: data["middle_clicks"] },
+            { label: "Mouse distance", data: data["mouse_distance"] },
+            { label: "Scroll distance", data: data["scroll_distance"] },
+            { label: "Keypresses", data: data["key_presses"] }
+        ];
+
+        Chart.defaults.font.family = getComputedStyle(document.body).getPropertyValue("font-family");
+
+        activityChart = new Chart(document.getElementById("activity-chart").getContext("2d"), {
+            type: "line",
+            data: {
+                labels: (() => {
+                    var timeLabels = [];
+                    var ampm = ["AM", "PM"];
+                    for (var i = 0; i < 24; i++) {
+                        var hour = i % 12;
+                        var period = ampm[Math.floor(i / 12)];
+                        timeLabels.push(`${hour < 10 ? "0" : ""}${hour}:00 ${period}`);
+                        timeLabels.push(`${hour < 10 ? "0" : ""}${hour}:30 ${period}`);
+                    }
+                    return timeLabels;
+                })(),
+                datasets: datasets.map(ds => ({
+                    label: ds.label,
+                    data: ds.data,
+                    pointRadius: 0,
+                    fill: false,
+                    tension: 0.1,
+                    borderWidth: 2
+                })),
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                plugins: {
+                    title: {
+                        display: true,
+                        text: `Last activity update: ${new Date(data["last_upload"]).toUTCString()}`,
+                        color: () => getComputedStyle(document.body).getPropertyValue("--primary"),
+                        position: "bottom",
+                        align: "start",
+                        font: {
+                            weight: "normal"
+                        }
+                    },
+                    legend: {
+                        display: true,
+                        position: "bottom",
+                        labels: {
+                            color: () => getComputedStyle(document.body).getPropertyValue("--primary")
+                        }
+                    },
+                    tooltip: {
+                        mode: "index",
+                        intersect: false,
+                        callbacks: {
+                            title: () => null,
+                            label: (context) => {
+                                const { dataset: { label = "" }, raw: value } = context;
+                                if (label === "Mouse distance" || label === "Scroll distance")
+                                    return `${label}: ${Math.round(value)} m`;
+                                return `${label}: ${value}`;
+                            },
+                        }
+                    },
+                },
+                scales: {
+                    x: {
+                        ticks: {
+                            maxTicksLimit: 9,
+                            color: () => getComputedStyle(document.body).getPropertyValue("--primary")
+                        },
+                        grid: {
+                            drawOnChartArea: true,
+                            color: () => getComputedStyle(document.body).getPropertyValue("--border")
+                        }
+                    },
+                    y: {
+                        beginAtZero: true,
+                        ticks: {
+                            callback: value => {
+                                var ranges = [
+                                    { divider: 1e6, suffix: "M" },
+                                    { divider: 1e3, suffix: "k" }
+                                ];
+                                for (var i = 0; i < ranges.length; i++)
+                                    if (value >= ranges[i].divider)
+                                        return (value / ranges[i].divider).toString() + ranges[i].suffix;
+                                return value.toString();
+                            },
+                            color: () => getComputedStyle(document.body).getPropertyValue("--primary")
+                        },
+                        grid: {
+                            drawOnChartArea: true,
+                            color: () => getComputedStyle(document.body).getPropertyValue("--border")
+                        }
+                    },
+                },
+            },
+        });
+    });
+</script>
+
 
   </div>
 
@@ -279,6 +393,9 @@
         } else {
             document.body.classList.add("dark");
             localStorage.setItem("pref-theme", "dark");
+        }
+        if (activityChart !== undefined) {
+            activityChart.update();
         }
     });
 </script>
